added few components

--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -52,7 +52,7 @@
 
     .paragraph-wrap {
       padding: 12px;
-      color: #22292f;
+      color: #000000;
       font-size: 16px;
       word-wrap: break-word;
       overflow-wrap: break-word;
@@ -71,12 +71,10 @@
 
   .about_sriLanka {
     height: 110vh;
-
     h2 {
       font-size: 30px;
       padding-bottom: 20px;
     }
-
     .about_desc {
       padding: 0 80px 80px 0;
       line-height: 22px;
@@ -105,48 +103,6 @@
       background: url("../../assets/images/home/travel_grid.png") no-repeat center;
       background-size: cover;
     }
-  }
-
-  .full_footer {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 1)),
-    url("../../assets/images/home/Cover-banner.jpg") no-repeat;
-    color: white;
-
-    #social_media {
-      padding: 100px 0;
-      height: 55vh;
-    }
-
-    #social_media p {
-      font-size: 35px;
-      font-weight: 600;
-      margin-bottom: 30px;
-    }
-
-    .social_icons img {
-      width: 90px;
-      padding-right: 20px;
-      transition: 0.5s;
-    }
-
-    .social_icons a:hover img {
-      transform: translateY(-10px);
-    }
-
-    .footer-box {
-      padding: 20px;
-    }
-
-    .text-reset {
-      text-decoration: none !important;
-    }
-
-    .copyRight {
-      margin-bottom: 0;
-      padding-bottom: 20px;
-      text-align: center;
-    }
-
   }
 }
 
